kubernetes/gateway/gateway-simple.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: clones-gateway-simple
  namespace: wordpress-staging
spec:
  gatewayClassName: alb
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "*.clones.betaweb.ai"
    allowedRoutes:
      namespaces:
        from: Same
